2008-10-25  Sverker Nilsson  <sverker@sverker-laptop>

	* setup.py: Removed the extra compile args for MSWindows -
	  they were only there for debugging.

2008-10-24  Sverker Nilsson  <sverker@sverker-laptop>

	* Added debug parameter to hpy().test() and made all test_main
	  functions take that parameter. When true, it will be possible
	  to look into the failure stack with pdb.pm() .

	* Added Chad Austin's patch for MSWINDOWS
	  Made a temp os-determination. Have to check this out.
	  Changed macro FILL to return -1 to get rid of warning in a set init.
	  Made the initfunc in heapyc return an int to get rid of new warning.
	  Moved & renamed macro to NYFILL in new file src/include/guppy.h
	  which is intended to host general public guppy related includes.
	  Made corresponding changes FILL->NYFILL where used.
	
2008-06-18  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/doc/__init__.py (Tab): Added tabs for different help
	browsing environments. 

2008-06-17  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/doc/__init__.py (_GLUECLAMP_.help_instance): Added
	method. Also added Subject class.

	* guppy/heapy/UniSet.py (UniSet and subclasses): Added _help_url_
	attributes and _get_help which uses this via help_instance, but I
	began to think they should perhaps refer to the gsl kindnames
	instead. 

	* guppy/doc/__init__.py (Document): Added class Document, various
	restructurings in progress

2008-05-22  Sverker Nilsson  <sverker@sverker-laptop>

	* README (License): Added modify and redistribute wording to
	the License for clarity, still refers to MIT license.

	* Removed ihelp pkg. Changes to various files to reflect
	ihelp->doc .
	
	* Moved ihelp.__init__.py into guppy/doc
	
	* Moved top-level doc dir into guppy package
	
	*  ihelp.__init__.py : continued improving text html rendering

2008-05-21  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/Spec.py: 

	* guppy/gsl/Filer.py: 

	* guppy/gsl/DottedTree.py: 
